apps/goatlint/src/snapshots/_-W no-undef -c fixtures__cli__eslintrc_env__eslintrc_no_env.json fixtures__cli__eslintrc_env__test.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -W no-undef -c fixtures/cli/eslintrc_env/eslintrc_no_env.json fixtures/cli/eslintrc_env/test.js
working directory: 
----------

  ! eslint(no-undef): 'console' is not defined.
   ,-[fixtures/cli/eslintrc_env/test.js:1:1]
 1 | console.log('')
   : ^^^^^^^
   `----
  help: Either define 'console' or remove the reference to it. If 'console' is a global variable, add it to the 'globals' configuration.

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 127 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
